6/9 +製作&整理訂單表單 -將部分class移置dataPackage

--- a/app/src/main/res/layout/activity_shopping_cart.xml
+++ b/app/src/main/res/layout/activity_shopping_cart.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ShoppingCart">
-    <TableRow>
-        <ImageView
-            android:id="@+id/ivRestaurant"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            />
-    </TableRow>
+    tools:context=".ShoppingCart"
+    android:stretchColumns="1">
+    <ImageView
+        android:id="@+id/ivRestaurant"
+        android:layout_width="match_parent"
+        android:layout_margin="5dp"
+        android:gravity="center_vertical"
+        />
     <TableRow>
         <TextView
             android:id="@+id/tvSCrestname"
@@ -21,22 +19,44 @@
             android:layout_gravity="left"
             android:textSize="20sp"
             />
-        <TextView
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:id="@+id/tvSCrestAddress"
-            android:textSize="16sp"
-            />
 
     </TableRow>
-
-
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvSCrestfood"
-        android:layout_width="wrap_content"
+    <TableRow>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvSCrestAddress"
+            android:textSize="12sp"
+            android:layout_gravity="left"
+            />
+    </TableRow>
+    <ScrollView android:layout_height="150dp">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvSCrestfood"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+    </ScrollView>
+    <TableRow >
+        <TextView
+            android:text="Total:"
+            android:layout_gravity="left"
+            android:textSize="20sp"
+            />
+        <TextView
+            android:id="@+id/tvTotal"
+            android:layout_gravity="bottom|right"
+            android:paddingRight="5dp"
+            android:textSize="20sp"
+            />
+    </TableRow>
+    <EditText android:id="@+id/etAddress"
+        android:textSize="20sp"
+        android:layout_width="match_parent"/>
+    <Button
+        android:onClick="sendOrder"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        />
-
-
+        android:layout_margin="5dp"
+        android:text="sendOrder"/>
 </TableLayout>
